you have no idea what that means

--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -39,7 +39,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('lua-hot-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('lua-hot--hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -110,7 +110,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('rua-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('rua-hot--hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -181,7 +181,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('lla-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('lla-hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -252,7 +252,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('rla-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('rla-hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -323,7 +323,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('lw-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('lw-hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -394,7 +394,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('rw-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('rw-hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -465,7 +465,7 @@
                   <div class="color-single-display" style="background: #53ef4b"></div>
                   <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('bw-pink')" class="color-single color-single-dropdown">
+                <div onclick="colorPickerSelect('bw-hot-pink')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: pink"></div>
                   <p>Hot Pink</p>
                 </div>
@@ -514,6 +514,219 @@
                   <p>Black</p>
                 </div>
                 <div onclick="colorPickerSelect('bw-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-collar" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('collar')">
+                <h4>Collar</h4>
+                <div id="collar-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="collar-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-collar" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('c-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('c-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('c-hot-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('c-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('c-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('c-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('c-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('c-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('c-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('c-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('c-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('c-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('c-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('c-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('c-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-body-left" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('body-left')">
+                <h4>Body Left</h4>
+                <div id="body-left-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="body-left-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-body-left" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('bl-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('blhot-hot-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-body-right" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('body-right')">
+                <h4>Body Right</h4>
+                <div id="body-right-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="body-right-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-body-right" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('br-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('br-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('brhot-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('br-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('br-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('br-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('br-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('br-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('br-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('br-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('br-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('br-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('bl-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('br-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('br-teal')" class="color-single color-single-dropdown">
                   <div class="color-single-display" style="background: Teal"></div>
                   <p>Teal</p>
                 </div>
