--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -823,5 +823,6 @@
   </main>
 </body>
 <script src="./js.js"></script>
+<script src="./browser-detect.js"></script>
 </html>
 <!-- Warning! this auzzie is an ass wipe!! you've been warned -->
