--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section class="build-full">
-      <h1>Caos Suit Designer.</h1>
+      <h1>Caos Suit Designer</h1>
       <p>Create your own unique style and fly in style</p>
       <section class="build-wrap">
         <section class="color-picker">
