this is the test

--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -12,7 +12,7 @@
   <main>
     <section class="build-full">
       <h1>Caos Suit Designer</h1>
-      <p>Create your own unique style and fly in style</p>
+      <p id="build-wrapp">Create your own unique style and fly in style</p>
       <section class="build-wrap">
         <section class="color-picker">
           <div onclick="colorPickerPannelSet('measurements')" class="color-nav-1">Measurements</div>
@@ -27,7 +27,7 @@
                 <h4>Left Upper Arm</h4>
                 <div id="left-upper-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="left-upper-arm-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dorpdown-left-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -98,7 +98,7 @@
                 <h4>Right Upper Arm</h4>
                 <div id="right-upper-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="right-upper-arm-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dorpdown-right-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -169,7 +169,7 @@
                 <h4>Left Lower Arm</h4>
                 <div id="left-lower-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="left-lower-arm-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-lower-left-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -240,7 +240,7 @@
                 <h4>Right Lower Arm</h4>
                 <div id="right-lower-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="right-lower-arm-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-right-left-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -311,7 +311,7 @@
                 <h4>Left Wing</h4>
                 <div id="left-wing-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="left-wing-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-left-wing" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -382,7 +382,7 @@
                 <h4>Right Wing</h4>
                 <div id="right-wing-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="right-wing-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-right-wing" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -453,7 +453,7 @@
                 <h4>Body Wrap</h4>
                 <div id="body-wrap-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="body-wrap-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-body-wrap" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -524,7 +524,7 @@
                 <h4>Collar</h4>
                 <div id="collar-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="collar-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-collar" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -595,7 +595,7 @@
                 <h4>Body Left</h4>
                 <div id="body-left-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="body-left-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-body-left" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -666,7 +666,7 @@
                 <h4>Body Right</h4>
                 <div id="body-right-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
                 <p id="body-right-title">Select</p>
-                <img src="./img/double-down-arrow.svg"/>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/10897-200.png"/>
               </div>
               <div id="color-picker-dropdown-body-right" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
@@ -819,6 +819,9 @@
           <div class="cf-input-submit">Save and Send Design</div>
         </section>
       </section>
+    </section>
+    <section id="form-front-info">
+      <input class="generic-name" type="text" />
     </section>
   </main>
 </body>
