--- a/Alt Designs/freefly-One/testing.html
+++ b/Alt Designs/freefly-One/testing.html
@@ -1,69 +1,73 @@
 <div id="color-single-lining" class="color-single">
-  <div class="color-single-wrap" onclick="colorPickerDropdownFront('flside')">
+  <div class="color-single-wrap" onclick="colorPickerDropdownBack('ble')">
     <h4>Front Left Chest</h4>
-    <div id="flside-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
-    <p id="flside-title">Select</p>
+    <div id="ble-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+    <p id="ble-title">Select</p>
     <svg id="down-chevron" fill="black" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.65 52.17"><title>back-right-wing</title><g id="uEeni0.tif"><path d="M-91-55c.6.69,1.17,1.41,1.81,2.05,12.3,12.31,24.63,24.58,36.87,37,1.62,1.64,2.52,1.63,4.14,0,12.24-12.37,24.57-24.64,36.87-37,.64-.64,1.21-1.37,1.81-2.05H-8c.9,1,1.77,2,2.69,2.94,2.21,2.27,2.23,2.38,0,4.58q-9.79,9.81-19.6,19.6l-23,23c-2.42,2.41-2.43,2.41-4.91-.06Q-73.66-25.91-94.59-46.83c-.76-.76-1.6-1.45-2.41-2.17,0-2-.78-4.78.22-5.78S-93-55-91-55Z" transform="translate(97.29 55.29)"/></g></svg>
   </div>
-  <div id="color-picker-dropdown-flside" class="picker-dropdown left-armdropdown">
+  <div id="color-picker-dropdown-ble" class="picker-dropdown left-armdropdown">
     <p class="picker-dropdown-p">Select Color</p>
-    <div onclick="colorPickerSelectFront('flside-aqua')" class="acc-aqua color-single color-single-dropdown"   class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-aqua')" class="acc-aqua color-single color-single-dropdown"   class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: aqua"></div>
       <p>Auqa</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-neon-green')" class="acc-ngreen color-single color-single-dropdown"    class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-neon-green')" class="acc-ngreen color-single color-single-dropdown"    class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: #53ef4b"></div>
       <p>Neon Green</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-hot-pink')" class="acc-hpink color-single color-single-dropdown"  class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-hot-pink')" class="acc-hpink color-single color-single-dropdown"  class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: pink"></div>
       <p>Hot Pink</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-yellow')" class="acc-yellow color-single color-single-dropdown"    class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-yellow')" class="acc-yellow color-single color-single-dropdown"    class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: yellow"></div>
       <p>Yellow</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-maroon')" class="acc-maroon color-single color-single-dropdown" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-maroon')" class="acc-maroon color-single color-single-dropdown" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: maroon"></div>
       <p>Maroon</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-grey')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-red')" class="acc-red color-single color-single-dropdown" class="color-single color-single-dropdown">
+      <div class="color-single-display" style="background: red"></div>
+      <p>Red</p>
+    </div>
+    <div onclick="colorPickerSelectBack('ble-grey')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: darkGrey"></div>
       <p>Grey</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-navy')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-navy')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: Navy"></div>
       <p>Navy</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-purple')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-purple')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: Purplxe"></div>
       <p>Purple</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-darkGreen')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-darkGreen')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: DarkGreen"></div>
       <p>Dark Green</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-darkGrey')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-darkGrey')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: #393939"></div>
       <p>Dark Grey</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-blue')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-blue')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: Blue"></div>
       <p>Blue</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-lime')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-lime')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: #a2e978"></div>
       <p>Lime</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-white')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-white')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: White"></div>
       <p>White</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-black')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-black')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: Black"></div>
       <p>Black</p>
     </div>
-    <div onclick="colorPickerSelectFront('flside-teal')" class="color-single color-single-dropdown">
+    <div onclick="colorPickerSelectBack('ble-teal')" class="color-single color-single-dropdown">
       <div class="color-single-display" style="background: Teal"></div>
       <p>Teal</p>
     </div>
